files/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.nwallace.io'
      secretName: nwallace.io-tls-secret
  rules:
    - host: argocd.nwallace.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
